# krabbascript

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  TODO.md
.github/: CONTRIBUTING.md
include/common/: common.h
include/easyargs/: easyargs.h
include/errors/: errors.h
include/parser/: parser.h
include/tokenizer/: tokenizer.h
include/toml/: tomlc17.h
include/types/: types.h
include/vectors/: vectors.h
src/: main.c
src/common/: common.c
src/parser/: parser.c
src/tokenizer/: tokenizer.c
src/toml/: tomlc17.c
src/vectors/: vectors.c
tests/: arg_parser.krs  arithmetic.krs  expression.krs  for_loop.krs  local_public.krs  variables.krs
